@@ -66,6 +66,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 5475) New pages feeds ignore "limit" argument
 * (bug 5184) CSS misapplied to elements in Special:Allmessages due to conflicting
   anchor identifiers
+* (bug 5519) Allow sidebar cache to be disabled; disable it by default.
+
 
 == Compatibility ==
 
